<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/secondary_green">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="79dp"
        android:text="@string/main_title"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:layout_marginTop="8dp"
        android:text="@string/main_description"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="313dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonHistory"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/secondary_green"
            android:text="@string/button_history" />

        <Button
            android:id="@+id/buttonSpecies"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/secondary_green"
            android:text="@string/button_species" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_logout"
        android:backgroundTint="@android:color/holo_red_dark"/>

</LinearLayout>