<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/background_light"
    tools:context=".EspeciesActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/species_title"
        android:textSize="22sp"
        android:textColor="@color/primary_green"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"/>

    <!-- Tarjeta para la Ballena -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardWhale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ballena"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/species_whale"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Tarjeta para el Mono -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardMonkey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">
        <!-- Contenido similar al de la ballena -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/mono"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/species_monkey"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Tarjeta para la Serpiente -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardSnake"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">
        <!-- Contenido similar al de la ballena -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/serpiente"
                android:scaleType="centerCrop"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/species_snake"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"                android:layout_marginStart="16dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonBackSpecies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/secondary_green"
        android:text="@string/button_back" />

</LinearLayout>